--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_audio_reply_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_audio_reply_cell.xml
@@ -98,9 +98,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/commentDataTextView"
+            android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/commentorImageView"
-            android:layout_toRightOf="@+id/commentorImageView"
-            android:layout_marginTop="10dp">
+            android:layout_toRightOf="@+id/commentorImageView">
 
             <ImageView
                 android:id="@+id/playAudioImageView"
@@ -169,7 +169,7 @@
                 android:id="@+id/upvoteImageVIew"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:src="@drawable/ic_upvote"
+                android:src="@drawable/ic_recommend"
                 android:tint="@color/app_red" />
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -178,7 +178,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:gravity="center"
-                android:text="0 Helpful"
+                android:text="0"
                 android:textColor="@color/groups.grey"
                 android:textSize="12sp"
                 app:fontName="oswald.ttf" />
@@ -194,7 +194,8 @@
             android:layout_toRightOf="@+id/upvoteCommentContainer"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/downvoteImageVIew"
