--- a/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
@@ -682,6 +682,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:layout_below="@+id/underline_3"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="-2dp"
                 android:drawableLeft="@drawable/ic_activity"
                 android:drawablePadding="20dp"
                 android:gravity="center_vertical"
