--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
@@ -41,7 +41,7 @@
             android:layout_alignParentTop="true"
             android:alpha="0.85"
             android:background="#121212"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/postSettingsContainer"
@@ -162,4 +162,7 @@
         android:layout_gravity="center"
         android:elevation="6dp"
         android:visibility="gone" />
+
+
+
 </android.support.design.widget.CoordinatorLayout>
