--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupsview.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupsview.xml
@@ -23,4 +23,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tablayout" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/createFabButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/space_10"
+        android:backgroundTint="@color/app_red"
+        android:clickable="true"
+        android:src="@drawable/ic_plus"
+        android:visibility="gone" />
 </RelativeLayout>
