--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -854,7 +854,7 @@
                         app:fontName="oswald_regular.ttf" />
 
                     <com.mycity4kids.widget.CustomFontTextView
-                        android:id="@+id/textApply"
+                        android:id="@+id/textApplyReferral"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/space_40"
                         android:layout_alignParentEnd="true"
