--- a/MyCity4Kids/MyCity4Kids/res/layout/share_referral_code.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/share_referral_code.xml
@@ -3,15 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toStartOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout3"
@@ -35,7 +38,7 @@
                     android:layout_marginBottom="10dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Refer MyMoney to your Friends"
+                    android:text="Invite &amp; Earn MyMoney!"
                     android:textSize="@dimen/space_25"
                     app:fontName="oswald_regular.ttf"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -50,7 +53,8 @@
                     android:layout_marginBottom="8dp"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="This is dummy text"
+                    android:paddingRight="10dp"
+                    android:text="Invite a friend to join MyMoney by sharing your referral code. Both of you will earn Rs. 25 once she has successfully participated in a MyMoney campaign."
                     app:fontName="oswald.ttf"
                     app:layout_constraintStart_toStartOf="@+id/textTitle"
                     app:layout_constraintTop_toBottomOf="@+id/textTitle"
@@ -61,6 +65,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:background="@drawable/share"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toTopOf="@+id/guideline5"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,10 +92,11 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Share Your Referral Code"
+                    android:text="Share your referral code and start earning"
                     app:fontName="oswald.ttf"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/layoutCode"
@@ -111,7 +117,6 @@
                         android:layout_marginLeft="8dp"
                         android:gravity="center"
                         android:letterSpacing=".1"
-                        android:text="bkcpg5529b"
                         android:textAllCaps="true"
                         android:textColor="@color/black"
                         android:textSize="@dimen/space_25"
@@ -121,7 +126,7 @@
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/imageShare"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="8dp"
