--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -809,47 +809,54 @@
                     android:textSize="16dp"
                     app:fontName="oswald_regular.ttf" />
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/referHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_15"
-                    android:layout_marginLeft="@dimen/space_15"
-                    android:layout_marginTop="@dimen/space_15"
-                    android:layout_marginEnd="@dimen/space_15"
-                    android:layout_marginRight="@dimen/space_15"
-                    android:text="@string/apply_refer_code"
-                    android:textColor="@color/campaign_515151"
-                    android:textSize="17sp"
-                    app:fontName="oswald_regular.ttf"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view_6" />
-
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="110dp"
                     android:layout_marginTop="10dp"
+                    android:paddingTop="5dp"
                     android:background="@drawable/shape_rectangle_light_red">
 
                     <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/referHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginEnd="14dp"
+                        android:layout_marginRight="14dp"
+                        android:paddingLeft="5dp"
+                        android:text="@string/refer_code"
+                        android:textColor="@color/campaign_515151"
+                        android:textSize="17sp"
+                        app:fontName="oswald_regular.ttf"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/view_6" />
+
+                    <com.mycity4kids.widget.CustomFontEditText
                         android:id="@+id/editReferralCode"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/space_40"
-                        android:layout_alignEnd="@+id/textApply"
-                        android:layout_alignRight="@+id/textApply"
+                        android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="20dp"
                         android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginRight="0dp"
                         android:background="@drawable/shape_rectangle_light_grey_boder_white_solid"
                         android:gravity="center_vertical"
                         android:hint="REFERRAL CODE(Optional)"
-                        android:inputType="number"
                         android:lineSpacingExtra="2.2dp"
                         android:paddingStart="15dp"
                         android:paddingLeft="15dp"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_light_black"
                         app:fontName="oswald_regular.ttf" />
 
