--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_post_audio_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_post_audio_item.xml
@@ -396,7 +396,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeMainContainer"
+            android:layout_marginLeft="@dimen/space_10"
             android:layout_marginTop="@dimen/space_10"
+            android:layout_marginRight="@dimen/space_10"
             android:background="@drawable/group_post_comment_round_corner_layout"
             android:visibility="gone">
 
